--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Brotli==1.1.0
 celery==5.3.4
 certifi==2023.7.22
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.1
 click==8.1.7
 click-didyoumean==0.3.0
@@ -19,6 +20,7 @@ decorator==4.4.2
 defusedxml==0.7.1
 distlib==0.3.7
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==4.2.7
 django-allauth==0.59.0
 django-chartjs==2.3.0
@@ -56,11 +58,14 @@ python-decouple==3.4
 python3-openid==3.2.0
 pytz==2021.1
 qrcode==7.4.2
+reportlab==4.0.9
 requests==2.31.0
 requests-oauthlib==1.3.1
 setuptools==68.2.2
 six==1.16.0
 sqlparse==0.4.4
+static-ranges==0.2.0
+static3==0.7.0
 stevedore==5.1.0
 style==1.1.0
 tinycss2==1.2.1
