--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ distlib==0.3.7
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==4.2.7
+django-admin-list-filter-dropdown==1.0.3
 django-allauth==0.59.0
 django-chartjs==2.3.0
 django-ckeditor==6.7.0
