--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cryptography==41.0.7
 cssselect2==0.7.0
 decorator==4.4.2
 defusedxml==0.7.1
+diff-match-patch==20230430
 distlib==0.3.7
 dj-database-url==0.5.0
 dj-static==0.0.6
@@ -26,9 +27,12 @@ django-admin-list-filter-dropdown==1.0.3
 django-allauth==0.59.0
 django-chartjs==2.3.0
 django-ckeditor==6.7.0
+django-cleanup==8.0.0
 django-crispy-forms==2.1
+django-import-export==3.3.6
 django-js-asset==2.1.0
 django-phonenumber-field==7.2.0
+et-xmlfile==1.1.0
 filelock==3.12.4
 fonttools==4.43.1
 gunicorn==20.0.4
@@ -37,10 +41,13 @@ idna==3.4
 imageio==2.31.6
 imageio-ffmpeg==0.4.9
 kombu==5.3.2
+MarkupPy==1.14
 moviepy==1.0.3
 mysql-connector==2.2.9
 numpy==1.26.1
 oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.1.2
 pbr==6.0.0
 phonenumbers==8.13.23
 Pillow==10.0.1
@@ -58,6 +65,7 @@ python-dateutil==2.8.2
 python-decouple==3.4
 python3-openid==3.2.0
 pytz==2021.1
+PyYAML==6.0.1
 qrcode==7.4.2
 reportlab==4.0.9
 requests==2.31.0
@@ -69,6 +77,7 @@ static-ranges==0.2.0
 static3==0.7.0
 stevedore==5.1.0
 style==1.1.0
+tablib==3.5.0
 tinycss2==1.2.1
 toml==0.10.2
 tqdm==4.66.1
@@ -85,4 +94,6 @@ wcwidth==0.2.9
 weasyprint==60.1
 webencodings==0.5.1
 whitenoise==5.2.0
+xlrd==2.0.1
+xlwt==1.3.0
 zopfli==0.2.3
