--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,19 @@
-amqp==5.1.1
-appdirs==1.4.4
-asgiref==3.7.2
-billiard==4.1.0
-Brotli==1.1.0
-celery==5.3.4
-certifi==2023.7.22
-cffi==1.16.0
+asgiref==3.8.1
 chardet==5.2.0
-charset-normalizer==3.3.1
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-crispy-bootstrap5==0.7
-cryptography==41.0.7
-cssselect2==0.7.0
-decorator==4.4.2
-defusedxml==0.7.1
+crispy-bootstrap5==2024.2
 diff-match-patch==20230430
-distlib==0.3.7
-dj-database-url==0.5.0
 dj-static==0.0.6
-Django==4.2.7
-django-admin-list-filter-dropdown==1.0.3
-django-allauth==0.59.0
-django-chartjs==2.3.0
-django-ckeditor==6.7.0
+Django==5.0.6
+django-allauth==0.63.3
+django-ckeditor==6.7.1
 django-cleanup==8.1.0
-django-crispy-forms==2.1
-django-import-export==4.0.0
-django-js-asset==2.1.0
-django-phonenumber-field==7.2.0
-filelock==3.12.4
-fonttools==4.43.1
-gunicorn==20.0.4
-html5lib==1.1
-idna==3.4
-imageio==2.31.6
-imageio-ffmpeg==0.4.9
-kombu==5.3.2
-moviepy==1.0.3
-mysql-connector==2.2.9
-numpy==1.26.1
-oauthlib==3.2.2
-pbr==6.0.0
-phonenumbers==8.13.23
-Pillow==10.0.1
-pipenv==2023.10.3
-platformdirs==3.11.0
-proglog==0.1.10
-prompt-toolkit==3.0.39
-pycodestyle==2.7.0
-pycparser==2.21
-pydyf==0.8.0
-PyJWT==2.8.0
-pyphen==0.14.0
-pypng==0.20220715.0
-python-dateutil==2.8.2
-python-decouple==3.4
-python3-openid==3.2.0
-pytz==2021.1
-qrcode==7.4.2
-reportlab==4.0.9
-requests==2.31.0
-requests-oauthlib==1.3.1
-setuptools==68.2.2
-six==1.16.0
-sqlparse==0.4.4
+django-crispy-forms==2.2
+django-import-export==4.1.0
+django-js-asset==2.2.0
+pillow==10.4.0
+reportlab==4.2.2
+sqlparse==0.5.0
 static-ranges==0.2.0
 static3==0.7.0
-stevedore==5.1.0
-style==1.1.0
 tablib==3.5.0
-tinycss2==1.2.1
-toml==0.10.2
-tqdm==4.66.1
-typing_extensions==4.9.0
-tzdata==2023.3
-Unipath==1.1
-update==0.0.1
-urllib3==2.0.7
-vine==5.0.0
-virtualenv==20.24.6
-virtualenv-clone==0.5.7
-virtualenvwrapper==4.8.4
-wcwidth==0.2.9
-weasyprint==60.1
-webencodings==0.5.1
-whitenoise==5.2.0
-zopfli==0.2.3
+tzdata==2024.1
